; ModuleID = '/home/carl/AnghaBench/Craft/src/extr_db.c_db_worker_start.c'
source_filename = "/home/carl/AnghaBench/Craft/src/extr_db.c_db_worker_start.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@db_enabled = common dso_local global i32 0, align 4
@ring = common dso_local global i32 0, align 4
@mtx = common dso_local global i32 0, align 4
@mtx_plain = common dso_local global i32 0, align 4
@load_mtx = common dso_local global i32 0, align 4
@cnd = common dso_local global i32 0, align 4
@thrd = common dso_local global i32 0, align 4
@db_worker_run = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @db_worker_start(i8* %0) #0 {
  %2 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %3 = load i32, i32* @db_enabled, align 4
  %4 = icmp ne i32 %3, 0
  br i1 %4, label %6, label %5

5:                                                ; preds = %1
  br label %16

6:                                                ; preds = %1
  %7 = call i32 @ring_alloc(i32* @ring, i32 1024)
  %8 = load i32, i32* @mtx_plain, align 4
  %9 = call i32 @mtx_init(i32* @mtx, i32 %8)
  %10 = load i32, i32* @mtx_plain, align 4
  %11 = call i32 @mtx_init(i32* @load_mtx, i32 %10)
  %12 = call i32 @cnd_init(i32* @cnd)
  %13 = load i32, i32* @db_worker_run, align 4
  %14 = load i8*, i8** %2, align 8
  %15 = call i32 @thrd_create(i32* @thrd, i32 %13, i8* %14)
  br label %16

16:                                               ; preds = %6, %5
  ret void
}

declare dso_local i32 @ring_alloc(i32*, i32) #1

declare dso_local i32 @mtx_init(i32*, i32) #1

declare dso_local i32 @cnd_init(i32*) #1

declare dso_local i32 @thrd_create(i32*, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
